修正 二进制特征码 读写错误。

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,8 +1,20 @@
 ﻿################################################################
-INCLUDE_PATH = $(SRCPATH)/include
-CFLAGS      += /I"$(INCLUDE_PATH)"
+INCLUDE_PATH    := $(SRCPATH)/include
+CFLAGS          += /I"$(INCLUDE_PATH)"
 
-CFLAGS      += /Zc:threadSafeInit-
+CFLAGS          += /Zc:threadSafeInit-
+
+XLIB_HS         := $(wildcard D:/xlib/*.h)
+XLIB_HSS        := $(patsubst D:/xlib/%,$(INCLUDE_PATH)/xlib/%,$(XLIB_HS))
+
+.PHONY : check_xlib
+check_xlib : $(XLIB_HSS)
+
+$(INCLUDE_PATH)/xlib/%.h : D:/xlib/%.h
+	@echo $^ ~~ $@
+	@cd $(INCLUDE_PATH)/xlib && copy "D:\xlib\$(^F)" "$(@F)" >nul
+	@if exist x86 rd /s /q x86
+	@if exist x64 rd /s /q x64
 
 vpath xit.cc   $(INCLUDE_PATH)/xit
 ################################################################
@@ -17,5 +29,5 @@ $(ProjectName).dll : xsig_dll.o | $(DSTPATH)
 $(ProjectName).exe : xit.o xsig_exe.o | $(DSTPATH)
 	$(LINK) $(LDFLAGS) $(LDFLAGS_CONSOLE) /OUT:"$(DSTPATH)/$(@F)" $(^F)
 
-all : $(ProjectName).dll $(ProjectName).exe
+all : check_xlib $(ProjectName).dll $(ProjectName).exe
 	@echo make done.
